# jacob-worker

./: .gitignore  Cargo.toml  README.md  test.http  wrangler.toml
docs/: index.html
docs/assets/: index.1b86a7c5.css  index.524b015b.js
src/: chat.rs  lib.rs
website/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
