[package]
authors = ["Jacob Torrång"]
edition = "2018"
name = "jacob"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
render = "0.3.1"
serde = "1.0.130"
serde_json = "1.0.67"
worker = "0.0.7"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.1", optional = true}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
